[package]
name = "s-udp"
version = "0.2.3"
edition = "2024"
description = "High-performance, adaptive, and cryptographically secure reliable UDP protocol with high-throughput windowing."
license = "MIT"
keywords = ["udp", "protocol", "reliable", "adaptive", "security"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/skill-0ff/S-UDP"
homepage = "https://github.com/skill-0ff/S-UDP"
readme = "README.md"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
zeroize = { version = "1.7", features = ["derive"] }
dashmap = "5.5"
anyhow = "1.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
chacha20poly1305 = "0.10.1"
sha2 = "0.10"
